--- a/app/globals.css
+++ b/app/globals.css
@@ -57,3 +57,19 @@
     -moz-osx-font-smoothing: grayscale;
     font-feature-settings: 'liga';
 }
+
+@keyframes float {
+
+    0%,
+    100% {
+        transform: translateY(0);
+    }
+
+    50% {
+        transform: translateY(-20px);
+    }
+}
+
+.animate-float {
+    animation: float 6s ease-in-out infinite;
+}
